# engforge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: build.yml  docs.yml  release.yml
docs/: Makefile  _config.yml  conf.py  examples.rst  requirements.txt  tests.rst
docs/_build/doctrees/: api.doctree  tests.doctree  (+2 more)
engforge/: __init__.py  _testing_components.py  attr_plotting.py  attr_signals.py  attr_solver.py  attributes.py  common.py  component_collections.py  configuration.py  dataframe.py  dynamics.py  engforge_attributes.py  env_var.py  locations.py  logging.py  problem_context.py  properties.py  reporting.py  solveable.py  solver.py  solver_utils.py  system.py  system_reference.py  tabulation.py  typing.py
engforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
engforge/datastores/: __init__.py  data.py  datastores_requirements.txt  gdocs.py  reporting.py
engforge/eng/: costs.py  geometry.py  prediction.py  solid_materials.py  structure.py  structure_beams.py
engforge/examples/: air_filter.py  spring_mass.py
engforge/test/: __init__.py  solver_testing_components.py  test_airfilter.py  test_comp_iter.py  test_costs.py  test_dynamics.py  test_dynamics_spaces.py  test_four_bar.py  test_modules.py  test_performance.py  test_problem.py  test_problem_deepscoping.py  test_slider_crank.py  test_solver.py  test_tabulation.py
examples/: air_filter.py  field_area.py  spring_mass.py
examples/airfilter_report/: fan_fan-desert-discriminant.csv  system_airfilter-adaptive-altitude.csv  system_airfilter-amortized-square.csv  system_airfilter-relaxed-heater.csv
test/: test_airfilter.py  test_analysis.py  test_costs.py  test_dynamics.py  test_dynamics_spaces.py  test_four_bar.py  test_performance.py  test_problem.py  test_problem_deepscoping.py  test_slider_crank.py  test_solver.py
(+1180 files in other folders)
